Refatoração e melhoria de código em todo o software!!

--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "body-parser": "~1.12.0",
     "debug": "~2.1.1",
     "express": "~4.12.2",
+    "funcionalidaderest": "^1.0.0",
     "jade": "^1.11.0",
     "morgan": "~1.5.1",
     "multer": "^0.1.8",
     "notasrest": "^1.0.1",
     "opener": "^1.4.1",
+    "perfilrest": "^1.0.0",
     "referer-parser": "0.0.3",
     "request": "^2.60.0",
     "restler": "^3.3.0",
