Adição do modulo netconfig 	Facilita a configuração do servidor

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "^1.11.0",
     "morgan": "~1.5.1",
     "multer": "^0.1.8",
+    "netconfig": "^1.0.0",
     "notasrest": "^1.0.1",
     "opener": "^1.4.1",
     "perfilrest": "^1.0.0",
