--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "notasAdmin",
+  "name": "notasPJEAdmin",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -12,15 +12,25 @@
     "express": "~4.12.2",
     "funcionalidaderest": "^1.0.0",
     "jade": "^1.11.0",
-    "morgan": "~1.5.1",
     "multer": "^0.1.8",
     "netconfig": "^1.0.0",
     "notasrest": "^1.0.1",
-    "opener": "^1.4.1",
     "perfilrest": "^1.0.0",
     "referer-parser": "0.0.3",
-    "request": "^2.60.0",
     "restler": "^3.3.0",
     "serve-favicon": "~2.2.0"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.7.0",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-copy": "^0.8.2",
+    "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-contrib-nodeunit": "^0.4.1",
+    "grunt-contrib-uglify": "^0.11.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-nodemon": "^0.4.1",
+    "grunt-ssh": "^0.12.8"
   }
 }
